# notification

./: Cargo.toml  README.md  client.py  database.db
migrations/: 001_notification_prefs.sql
src/: lib.rs
src/preferences/: db.rs  handlers.rs  models.rs  routes.rs
src/prefs/: channel.rs  db.rs  handlers.rs  mod.rs  routes.rs
