[package]
name = "notification"
version = "0.1.0"
edition = "2024"

[dependencies]
event-stream = { git = "https://github.com/Austin-rgb/event-stream" }
push = { git = "https://github.com/Austin-rgb/push" }
ferrumec = { git = "https://github.com/Austin-rgb/ferrumec" }
e2schema = { git = "https://github.com/Austin-rgb/e2schema" }
actix-web = "4.13.0"
serde_json = "1.0.149"
async-trait = "0.1.89"

[patch."https://github.com/Austin-rgb/ferrumec"]
ferrumec={path="../ferrumec"}

[patch."https://github.com/Austin-rgb/push"]
push={path="../push"}
